<resources>
    <string name="videoLink">Video ansehen</string>
    <string name="app_name">FIPLY</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="welcome">Willkommen in der FIPLY APP!</string>
    <string name="startTr">Training</string>
    <string name="startEU">User</string>
    <string name="startTrainView">Trainingsplan</string>
    <string name="startUe">Übungen</string>
    <string name="startPlaylist">Playlisten</string>
    <string name="titleUe">Willkommen im Übungskatalog!</string>
    <string name="titleTS">Willkommen in einer Traingssession!</string>
    <string name="titleEU">Willkommen in der Usererstellung!</string>
    <string name="drawer_open">Navigationsleiste öffnen</string>
    <string name="drawer_close">Navigationsleiste öffnen</string>
    <string name="detailMG">Muskelgruppe: </string>
    <string name="detailEquip">Equipment: </string>
    <string name="detailDesc">Beschreibung: </string>
    <string name="detailAnl">Anleitung: </string>
    <string name="detailName">Dummy-Name</string>
    <string name="detailSchwierigkeit">Schwierigkeit: </string>
    <string name="songPlay">Play</string>
    <string name="songPause">Pause</string>
    <string name="songStop">Stop</string>
    <string name="songNext">&#187;</string>
    <string name="songLast">&#171;</string>
    <string name="songList">&#8801;</string>
    <string name="songNotFound">Keine Songs gefunden</string>
    <string name="watchStart">Start</string>
    <string name="watchPause">Pause</string>
    <string name="watchContinue">Continue</string>
    <string name="watchReset">Reset</string>
    <string name="watchLap">Lap</string>
    <string name="timerStart">Start</string>
    <string name="timerPause">Pause</string>
    <string name="timerContinue">Continue</string>
    <string name="timerReset">Reset</string>
    <string name="navWatch">Watch</string>
    <string name="navTimer">Timer</string>
    <string name="etPlName">Playlistname</string>
    <string name="btPlSave">Save</string>
    <string name="btPlAdd">Add</string>
    <string name="sizeString">Size</string>
    <string name="weightString">Weight</string>
    <string name="detailSaetze">Sätze:</string>
    <string name="detailGewicht">Gewicht:</string>
    <string name="detailEquipment">Equipment:</string>
    <string name="detailWiederholungen">Wiederholungen:</string>
    <string name="alertnoplan">Bitte lassen Sie sich vorher einen Trainingsplan erstellen.</string>
    <string name="choosedaybt">Tage auswählen</string>
    <string name="btnLastUeb">Zurück</string>
    <string name="btnNextUeb">Weiter</string>
    <string name="btnMusicHide">Musik</string>
    <string name="btnClocksHide">Uhren</string>
    <string name="generateTitle">Trainingsplan generieren</string>
    <string name="generateZiel">Trainingsziel: </string>
    <string name="facebook_app_id">1541961082763294</string>
    <string name="trainingszielMuskelaufbau">Muskelaufbau</string>
    <string name="trainingszielGesundheit">Cardio/Abnahme</string>
    <string name="trainingszielMaximalKraft">Maximalkraft</string>
    <string name="toggleButton">Trainiert/Untrainiert</string>
    <string name="toggleOnText">Trainiert</string>
    <string name="toggleOffText">Untrainiert</string>
    <string name="generateDatePickText">Wählen Sie einen Starttermin</string>
    <string name="chooseDayText">Trainingstage wählen</string>
    <string name="choosedayoneText">Wähle 1. Tag:</string>
    <string name="choosedaytwoText">Wähle 2. Tag:</string>
    <string name="choosedaythreeText">Wähle 3. Tag:</string>
    <string name="generatebt">Los!!</string>
    <string name="fehler">Fehler</string>
    <string name="checkInput">Überprüfen Sie bitte ihre Eingabe.</string>
    <string name="fertig">Fertig!</string>
    <string name="btnPlaylistSave">Speichern</string>
    <string name="btnPlaylistSelectAll">Alle</string>
    <string name="btnPlaylistSelectNone">Keine</string>
    <string name="btnPlaylistBack">Zurück</string>
    <string name="startStatistic">Statistik</string>
    <string name="successmessagetrain">Dein persönlicher Trainingsplan wurde erfolgreich generiert.</string>
    <string name="fsettingtitle">Übersicht</string>
    <string name="sessionsettingstitle">!! Go Go Go !!</string>
    <string name="nouebungenfortoday">Heute stehen keine Uebungen an! Wollen Sie die Uebungen eines anderen Tags durchführen?</string>
    <string name="tvFeedbackGewichtGestemmt">Sie haben gerade 100 kg gestemmt!</string>
    <string name="tvFeedbackMood">Wie ist es dir bei dem Training gegangen?</string>
    <string name="heutestehen">Heute stehen </string>
    <string name="uebungenan">Übungen an!</string>
    <string name="btnFeedbackShowStats">Weiter zur Statistik</string>
    <string name="startTrainSession">Starte Trainingssession</string>
    <string name="chooseotheruebung">...oder Übungen eines anderen Tags wählen</string>
    <string name="montag">Montag</string>
    <string name="dienstag">Dienstag</string>
    <string name="mittwoch">Mittwoch</string>
    <string name="donnerstag">Donnerstag</string>
    <string name="freitag">Freitag</string>
    <string name="samstag">Samstag</string>
    <string name="sonntag">Sonntag</string>
    <string name="esstehen">Es stehen</string>
    <string-array name="navigationArray">
        <item>Menü</item>
        <item>Training</item>
        <item>User</item>
        <item>Trainingsplan</item>
        <item>Übungen</item>
        <item>Playlisten</item>
        <item>Einstellungen</item>
    </string-array>
    <string-array name="greetingArray">
        <item>Guten Morgen</item>
        <item>Mahlzeit</item>
        <item>Schönen Nachmittag</item>
        <item>Guten Abend</item>
    </string-array>
    <string-array name="proficiency">
        <item>Not Fit</item>
        <item>Fit</item>
    </string-array>
    <string-array name="ageGroups">
        <item>16-20</item>
        <item>21-30</item>
        <item>31-40</item>
        <item>41-50</item>
        <item>50+</item>
    </string-array>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string name="tvSettingsMusic">Wenn sie Musik einlesen, können sie Playlisten erstellen und während dem Trainieren Musik hören</string>
    <string name="btSettingsMusic">Musik Erlaubnis abfragen</string>
    <string name="btSettingsRefreshMusic">App neu starten und Musik zur Bibliothek hinzufügen</string>
    <string name="notificationInterval">Zeitspanne zwischen Erinnerungen</string>
    <string name="notificationIntervalDefault">0</string>
    <string name="manageMusic">Musik verwalten</string>
    <string name="manageReset">Reset the app</string>
</resources>