<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/darkSecondary"
    >

    <LinearLayout
        android:id="@+id/linearLayoutPlaylist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnPlaylistSave"
            android:text="@string/btnPlaylistSave"
            />

        <Button
            android:id="@+id/btPlBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnPlaylistBack"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnPlaylistSelectAll"
            android:text="@string/btnPlaylistSelectAll"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnPlaylistSelectNone"
            android:text="@string/btnPlaylistSelectNone"/>
    </LinearLayout>

    <EditText
        android:id="@+id/etPlName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/linearLayoutPlaylist"
        android:text="@string/etPlName"
        />

    <ListView
        android:id="@+id/lvPlSongs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/etPlName"
        android:layout_alignParentTop="true"
        android:choiceMode="multipleChoice"
        />

</RelativeLayout>