<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvSettingsMusic"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/btSettingsReadMusic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btSettingsMusic"
        android:background="@drawable/buttonshape"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/btSettingsRefreshMusic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btSettingsRefreshMusic"
        android:background="@drawable/buttonshape"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvSettingsSongFoundCount"
        android:layout_marginTop="10dp"
        />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lvSettingsSongs"></ListView>

</LinearLayout>